# typemill

./: .gitattributes  .gitignore  .gitmodules  .knipignore  .mcp.json  .npmignore  00_LOGGING_PROPOSAL.md  00_PROPOSAL_LANGUAGE_PLUGIN_REFACTOR.md  00_PROPOSAL_TREE.md  00_PROPOSAL_UPDATE_PACKAGES.md  00_refactor.proposal.md  01_MERGE_REMOTES_PROPOSAL.md  01b_unified_analysis_api.proposal.md  01c1_actionable_suggestions_core.proposal.md  01c2_actionable_suggestions_integration.proposal.md  01c3_actionable_suggestions_system.proposal.md  01c_actionable_suggestions.md  02_PLUGIN_REGISTRATION_IMPLEMENTATION.md  02_PLUGIN_REGISTRATION_PROPOSAL.md  03_DEVELOPER_EXPERIENCE_PROCESS.md  03a_advanced_dead_code.md  04_PROPOSAL_JULES_CSHARP_REVIEW.md  04_SUPPORT_MATRIX_PROPOSAL.md  05_PROPOSAL_LANG_SUPPORT.md  05_PROPOSAL_LARGE_FILE_SPLIT.md  05_fix_search_symbols.proposal.md  05_test_infrastructure_recovery.proposal.md  06_PROPOSAL_BATCH_EXECUTE.md  06_directory_rename_import_updates.proposal.md  06_language_support_expansion.md  07_SELF_REFACTOR_EXECUTION_PLAN.md  07_SEMANTIC_NAMING_PROPOSAL.md  10_ANALYSIS_SUBSYSTEM_ARCHITECTURE.md  10_PROPOSAL_REFACTORING_FOCUS.md  10_TREE_PROPOSAL.md  11_LANGUAGE_EXPANSION_PROPOSAL.md  20_BACKEND_MULTITENANCY_PROPOSAL.md  20_EXTERNAL_PLUGIN_SYSTEM_PROPOSAL.md  20_PROPOSAL_RENAME_TO_TYPEMILL.md  30_PROPOSAL_ADD_AST_REFACTORING.md  (+168 more)
analysis/cb-analysis-circular-deps/: Cargo.toml
analysis/cb-analysis-circular-deps/src/: builder.rs  lib.rs
analysis/cb-analysis-common/: Cargo.toml
analysis/cb-analysis-common/src/: error.rs  graph.rs  lib.rs  traits.rs  types.rs
analysis/cb-analysis-deep-dead-code/: Cargo.toml
analysis/cb-analysis-deep-dead-code/src/: dead_code_finder.rs  graph_builder.rs  lib.rs
analysis/cb-analysis-deep-dead-code/tests/: deep_dead_code_test.rs
analysis/cb-analysis-graph/: Cargo.toml
analysis/cb-analysis-graph/src/: cache.rs  call.rs  dependency.rs  error.rs  lib.rs  query.rs
analysis/mill-analysis-circular-deps/: Cargo.toml
analysis/mill-analysis-circular-deps/src/: builder.rs  lib.rs
analysis/mill-analysis-common/: Cargo.toml
analysis/mill-analysis-common/src/: error.rs  graph.rs  lib.rs  traits.rs  types.rs
analysis/mill-analysis-dead-code/: Cargo.toml
analysis/mill-analysis-dead-code/src/: collect.rs  config.rs  detector.rs  error.rs  graph.rs  lib.rs  reachability.rs  references.rs  report.rs  types.rs  utils.rs
analysis/mill-analysis-dead-code/tests/: unit_tests.rs
apps/codebuddy/: CLI_FLAGS_EXAMPLES.md  Cargo.toml  INTEGRATION_REPORT.md
apps/codebuddy/src/: cli.rs  dispatcher_factory.rs  main.rs
apps/codebuddy/tests/: cli_tool_command.rs  contract_validation.rs  e2e_analysis_features.rs  e2e_consolidation.rs  e2e_error_scenarios.rs  e2e_git_operations.rs  e2e_manifest_cross_language.rs  e2e_performance.rs  e2e_python_language_specific.rs  e2e_refactoring_cross_language.rs  e2e_server_lifecycle.rs  e2e_system_tools.rs  e2e_workflow_execution.rs  e2e_workspace_operations.rs  integration_services.rs  lsp_feature_runners.rs  lsp_features.rs  mcp_file_operations.rs  mcp_handler_runners.rs
apps/mill/: Cargo.toml  build.rs
apps/mill/src/: dispatcher_factory.rs  main.rs
apps/mill/tests/: cli_tool_command.rs  contract_validation.rs  e2e_error_scenarios.rs  e2e_performance.rs  e2e_server_lifecycle.rs  e2e_system_tools.rs  e2e_workflow_execution.rs  lsp_feature_runners.rs  (+5 more)
benchmarks/: Cargo.toml
benchmarks/benches/: dispatch_benchmark.rs  forwarding_benchmark.rs  optimization_benchmark.rs
crates/cb-ast/: Cargo.toml  README.md
crates/cb-client/: Cargo.toml
crates/cb-core/: Cargo.toml  build.rs
crates/cb-handlers/: Cargo.toml
crates/cb-lang-common/: Cargo.toml
crates/cb-lang-csharp/: Cargo.toml  README.md
crates/cb-lang-go/: Cargo.toml  README.md
crates/cb-lang-markdown/: Cargo.toml
crates/cb-lang-rust/: Cargo.toml
crates/cb-lang-toml/: Cargo.toml
crates/cb-lang-typescript/: Cargo.toml  README.md  build.rs
crates/cb-lang-yaml/: Cargo.toml
crates/cb-lsp/: Cargo.toml
crates/cb-plugin-api/: Cargo.toml  build.rs
crates/cb-plugins/: Cargo.toml
crates/cb-protocol/: Cargo.toml
integration-tests/: Cargo.toml  TESTING_GUIDE.md
integration-tests/src/: dry_run_integration.rs  helpers.rs  lib.rs  resilience_tests.rs  test_analyze_batch.rs  test_analyze_dead_code.rs  test_analyze_deep_dead_code.rs  test_analyze_dependencies.rs  test_analyze_documentation.rs  test_analyze_quality.rs  test_analyze_structure.rs  test_analyze_tests.rs  test_comprehensive_rename_coverage.rs  test_delete_integration.rs  test_direct_tool_calls.rs  test_extract_integration.rs  test_inline_integration.rs  test_move_integration.rs  test_move_with_imports.rs  test_rename_integration.rs  test_rename_with_imports.rs  test_reorder_integration.rs  test_rust_mod_declarations.rs  test_suggestions_dead_code.rs  test_transform_integration.rs  test_unified_refactoring_api.rs  test_workspace_apply_integration.rs
integration-tests/tests/: cli_tool_command.rs  debug_hover.rs  direct_test.rs  e2e_advanced_features.rs  e2e_analysis_features.rs  e2e_consolidation.rs  e2e_error_scenarios.rs  e2e_flow.rs  e2e_git_operations.rs  e2e_in_process_test.rs  e2e_java_ast.rs  e2e_java_ast.rs.disabled  e2e_manifest_cross_language.rs  e2e_performance.rs  e2e_python_language_specific.rs  e2e_python_refactoring.rs  e2e_refactoring_cross_language.rs  e2e_server_lifecycle.rs  e2e_system_tools.rs  e2e_transport.rs  e2e_workflow_execution.rs  e2e_workspace_operations.rs  integration_services.rs  lsp_feature_runners.rs  lsp_features.rs  mcp_file_operations.rs  mcp_handler_runners.rs  test_python_direct.rs  test_symbol_matching.rs
jules/: Cargo.toml  README.md
rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  OFFLINE_BUILD.md  PROPOSAL_DOCKER_SHARED_VOLUMES.md  README.md  ROADMAP.md  SUPPORT_MATRIX.md  manual_test_phase2.md  test_plugin_system.rs
rust/.cargo/: config.toml
rust/.codebuddy/: config.json  workflows.json
rust/benchmark-harness/: Cargo.toml
rust/docs/: ARCHITECTURE.md  OPERATIONS.md  USAGE.md  contracts.md  parity-matrix.md
(+2059 files in other folders)
