[workspace]
members = [
    "crates/cb-core",
    "crates/cb-types",
    "crates/cb-protocol",
    "crates/cb-plugin-api",
    "crates/codebuddy-plugin-system",
    "crates/cb-ast",
    "crates/cb-lsp",
    "crates/cb-services",
    "crates/cb-handlers",
    "crates/cb-server",
    "crates/cb-client",
    "crates/cb-transport",
    "crates/cb-lang-common",
    "crates/cb-lang-rust",
    "crates/cb-lang-typescript",
    "crates/cb-lang-markdown",
    "crates/cb-lang-toml",
    "crates/cb-lang-yaml",
    "apps/codebuddy",
    "crates/cb-test-support",
    "analysis/cb-analysis-common",
    "analysis/cb-analysis-dead-code",
    "analysis/cb-analysis-deep-dead-code",
    "analysis/cb-analysis-graph",
    "analysis/cb-analysis-circular-deps",
    "tests/e2e",
]
resolver = "2"

# Package metadata for cargo install
[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/goobits/codebuddy"
homepage = "https://github.com/goobits/codebuddy"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "net",
    "sync",
    "time",
    "fs",
    "signal",
] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
mockall = "0.13"
tempfile = "3.8"
pretty_assertions = "1.4"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
futures = "0.3"

# Core API crates
cb-core = { path = "crates/cb-core" }
cb-plugin-api = { path = "crates/cb-plugin-api" }

# Graph analysis
petgraph = { version = "0.6", features = ["serde-1"] }
rustc-hash = "2.0"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
syn = { version = "2.0.106", features = ["full"] }
id-arena = "2.2"
bincode = "1.3"
walkdir = "2.5"

# Analysis crates
cb-analysis-common = { path = "analysis/cb-analysis-common" }
cb-analysis-dead-code = { path = "analysis/cb-analysis-dead-code" }
cb-analysis-graph = { path = "analysis/cb-analysis-graph" }

# Note: Multiple versions of hashbrown, bitflags, dirs, and getrandom exist
# due to transitive dependencies from upstream crates (dashmap, lsp-types, swc_*, etc.)
# These cannot be consolidated without upstream updates

# Language plugins (temporarily reduced to TS + Rust during unified API refactoring)
cb-lang-common = { path = "crates/cb-lang-common" }
cb-lang-rust = { path = "crates/cb-lang-rust" }
cb-lang-typescript = { path = "crates/cb-lang-typescript" }
cb-lang-markdown = { path = "crates/cb-lang-markdown" }

# Optimize build times for dev dependencies
[profile.dev.build-override]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
