[workspace]
members = [
    "crates/mill-plugin-api",
    "crates/mill-plugin-system",
    "crates/mill-lsp",
    "crates/mill-lsp-manager",
    "crates/mill-services",
    "crates/mill-server",
    "crates/mill-transport",
    "crates/mill-lang-common",
    "crates/mill-lang-rust",
    "crates/mill-lang-typescript",
    "crates/mill-lang-python",
    "languages/mill-lang-markdown",
    "languages/mill-lang-toml",
    "languages/mill-lang-yaml",
    "crates/mill-lang-gitignore",
    "crates/mill-plugin-bundle",
    "apps/mill",
    "analysis/mill-analysis-common",
    "analysis/mill-analysis-dead-code",
    "analysis/mill-analysis-deep-dead-code",
    "analysis/mill-analysis-graph",
    "analysis/mill-analysis-circular-deps",
    "tests/e2e",
    "crates/mill-workspaces",
    "crates/mill-auth",
    "crates/xtask", "crates/mill-ast", "crates/mill-client", "crates/mill-test-support", "crates/mill-handlers", "crates/mill-config", "crates/mill-foundation",
    "crates/mill-lang-cpp",
    "crates/mill-lang-csharp",
    "crates/mill-lang-swift",
    "crates/mill-lang-c",
    "crates/mill-lang-java",
    "crates/mill-lang-go",
]
resolver = "2"

# Package metadata for cargo install
[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/goobits/typemill"
homepage = "https://github.com/goobits/typemill"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "net",
    "sync",
    "time",
    "fs",
    "signal",
] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
mockall = "0.13"
tempfile = "3.8"
pretty_assertions = "1.4"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
dashmap = "5.5"
futures = "0.3"
regex = "1.10"
lsp-types = { version = "0.97.0", features = ["proposed"] }
tree-sitter = "0.25.4"
cc = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Core API crates
mill-foundation = { path = "crates/mill-foundation" }
mill-config = { path = "crates/mill-config" }
mill-plugin-api = { path = "crates/mill-plugin-api" }

# Graph analysis
petgraph = { version = "0.8", features = ["serde-1"] }
rustc-hash = "2.0"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
syn = { version = "2.0.106", features = ["full"] }
id-arena = "2.2"
bincode = "1.3"
walkdir = "2.5"
tree-sitter-java = "0.20"

# Analysis crates
mill-analysis-common = { path = "analysis/mill-analysis-common" }

# Note: Multiple versions of hashbrown, bitflags, dirs, and getrandom exist
# due to transitive dependencies from upstream crates (dashmap, lsp-types, swc_*, etc.)
# These cannot be consolidated without upstream updates

# Language plugins (temporarily reduced to TS + Rust during unified API refactoring)
mill-lang-common = { path = "crates/mill-lang-common", default-features = false }
mill-lang-typescript = { path = "crates/mill-lang-typescript", default-features = false }
mill-lang-rust = { path = "crates/mill-lang-rust", default-features = false }
mill-lang-python = { path = "crates/mill-lang-python", default-features = false }
mill-lang-cpp = { path = "crates/mill-lang-cpp", default-features = false }
mill-lang-swift = { path = "crates/mill-lang-swift", default-features = false }
mill-lang-csharp = { path = "crates/mill-lang-csharp", default-features = false }
mill-lang-c = { path = "crates/mill-lang-c", default-features = false }
mill-lang-go = { path = "crates/mill-lang-go", default-features = false }
mill-lang-java = { path = "crates/mill-lang-java", default-features = false }
mill-analysis-dead-code = { path = "analysis/mill-analysis-dead-code" }
mill-analysis-graph = { path = "analysis/mill-analysis-graph" }
mill-lang-markdown = { path = "languages/mill-lang-markdown", default-features = false }

# Optimize build times for dev dependencies
[profile.dev.build-override]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
