[package]
name = "benchmarks"
version = "1.0.1-beta"
edition = "2021"
authors = ["Codeflow Buddy Contributors"]
description = "Performance benchmarking suite for Codeflow Buddy"
license = "MIT OR Apache-2.0"

[dependencies]
cb-server = { path = "../crates/cb-server" }
cb-core = { path = "../crates/cb-core" }
cb-plugins = { path = "../crates/cb-plugins" }
cb-ast = { path = "../crates/cb-ast" }
tokio = { version = "1.42", features = ["full"] }
serde_json = "1.0"
simd-json = "0.16"
tempfile = "3.15"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "dispatch_benchmark"
harness = false

[[bench]]
name = "serialization_benchmark"
harness = false

[[bench]]
name = "forwarding_benchmark"
harness = false

[[bench]]
name = "optimization_benchmark"
harness = false
