[workspace]
members = [
    "crates/jules-api",
    "crates/jules-mcp-server",
    "crates/jules-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jules MCP Contributors"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "net",
    "sync",
    "time",
] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"

# CLI dependencies
clap = { version = "4.0", features = ["derive"] }

# Testing
mockall = "0.13"
wiremock = "0.6"

# Other
parking_lot = "0.12"
