[workspace]
members = [
    "crates/cb-api",
    "crates/cb-core",
    "crates/cb-ast",
    "crates/cb-plugins",
    "crates/cb-server",
    "crates/cb-client",
    "crates/cb-transport",
    "crates/cb-vfs",
    "crates/tests",
    "benchmark-harness",
    "apps/server",
]
resolver = "2"

# Package metadata for cargo install
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/goobits/codebuddy"
homepage = "https://github.com/goobits/codebuddy"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
config = "0.14"

# Testing
mockall = "0.12"

# Utilities
uuid = { version = "1.0", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
