[package]
name = "cb-analysis-circular-deps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
cb-analysis-graph = { workspace = true }
cb-plugin-api = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
path-clean = "1.0"

[dev-dependencies]
pretty_assertions = { workspace = true }
