[package]
name = "cb-analysis-deep-dead-code"
version = "1.0.0-rc4"
edition = "2021"

[dependencies]
# Workspace dependencies
cb-analysis-common = { path = "../cb-analysis-common" }

# External dependencies
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync", "time"] }
thiserror = "1.0"
tracing = "0.1"
lsp-types = "0.97"
petgraph = "0.6"
pathdiff = "0.2"

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.8"