[package]
name = "cb-analysis-deep-dead-code"
version = "1.0.0-rc4"
edition = "2021"

[dependencies]
# Workspace dependencies
cb-analysis-common = { workspace = true }

# External dependencies
async-trait = { workspace = true }
lsp-types = "0.97" # Note: Keep this version, workspace might have a different one for other needs
pathdiff = "0.2"
petgraph = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.8"