[package]
name = "cb-analysis-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Graph data structure
petgraph = { workspace = true }

# Serialization/Deserialization
serde = { workspace = true }
bincode = { workspace = true }

# Performance
rustc-hash = { workspace = true }
id-arena = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Codebuddy workspace dependencies
cb-core = { workspace = true }
cb-plugin-api = { workspace = true }

[dev-dependencies]
# For testing
tempfile = { workspace = true }
pretty_assertions = { workspace = true }