[package]
name = "mill-analysis-circular-deps"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mill-plugin-api = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
path-clean = "1.0"
ignore = "0.4"
tracing = { workspace = true }
mill-analysis-graph = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
