[package]
name = "mill-analysis-common"
version = "1.0.0-rc4"
edition = "2021"
license.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
petgraph = "0.8"
lsp-types = "0.97"

[dev-dependencies]
mockall = "0.13"
tokio = { version = "1.0", features = ["macros"] }
