[package]
name = "codebuddy"
version.workspace = true
edition = "2021"
description = "Pure Rust MCP server bridging Language Server Protocol (LSP) functionality to AI coding assistants"
license = "MIT"
repository = "https://github.com/goobits/codebuddy"
homepage = "https://github.com/goobits/codebuddy"
keywords = ["mcp", "lsp", "ai", "coding", "assistant"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
cb-server = { path = "../../crates/cb-server" }
cb-client = { path = "../../crates/cb-client" }
cb-ast = { path = "../../crates/cb-ast" }
codebuddy-foundation = { path = "../../crates/codebuddy-foundation" }
cb-transport = { path = "../../crates/cb-transport" }
cb-plugin-api = { path = "../../crates/cb-plugin-api" }

# Plugin bundle - contains all language plugins for inventory discovery
codebuddy-plugin-bundle = { path = "../../crates/codebuddy-plugin-bundle" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10.2", features = ["typed-header"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"

serde = "1.0"
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.0", features = ["derive"] }
fs2 = "0.4"
codebuddy-plugin-system = { path = "../../crates/codebuddy-plugin-system" }
codebuddy-core = { path = "../../crates/codebuddy-core" }
codebuddy-config = { path = "../../crates/codebuddy-config" }

[dev-dependencies]
cb-test-support = { path = "../../crates/cb-test-support" }
cb-server = { path = "../../crates/cb-server", features = ["test-helpers"] }
cb-handlers = { path = "../../crates/cb-handlers" }
cb-lsp = { path = "../../crates/cb-lsp" }
cb-plugin-api = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.28"
url = "2.5"
jsonwebtoken = { workspace = true }
uuid = "1.0"
futures-util = "0.3"
futures = "0.3"
criterion = "0.5"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
serial_test = "3.0"
shellexpand = "3.1"
tracing-subscriber = { workspace = true }
once_cell = "1.19"
e2e = { path = "../../tests/e2e" }

[features]
default = []
mcp-proxy = ["cb-server/mcp-proxy", "cb-client/mcp-proxy", "codebuddy-core/mcp-proxy", "codebuddy-config/mcp-proxy"]

# Platform-specific dependencies for process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"
