[package]
name = "mill"
version.workspace = true
edition = "2021"
description = "Pure Rust MCP server bridging Language Server Protocol (LSP) functionality to AI coding assistants"
license = "MIT"
repository = "https://github.com/goobits/typemill"
homepage = "https://github.com/goobits/typemill"
keywords = ["mcp", "lsp", "ai", "coding", "assistant"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
mill-server = { path = "../../crates/mill-server", default-features = false }
mill-foundation = { path = "../../crates/mill-foundation" }
mill-transport = { path = "../../crates/mill-transport", default-features = false }
mill-auth = { path = "../../crates/mill-auth" }
mill-plugin-api = { path = "../../crates/mill-plugin-api" }

# Plugin bundle - contains all language plugins for inventory discovery
mill-plugin-bundle = { path = "../../crates/mill-plugin-bundle", default-features = false }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10.2", features = ["typed-header"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"

serde = "1.0"
serde_json = "1.0"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.0", features = ["derive"] }
fs2 = "0.4"
glob = "0.3"
mill-plugin-system = { path = "../../crates/mill-plugin-system", default-features = false, features = ["runtime"] }
mill-config = { path = "../../crates/mill-config" }
mill-ast = { path = "../../crates/mill-ast", default-features = false }
mill-client = { path = "../../crates/mill-client" }
mill-lsp-manager = { path = "../../crates/mill-lsp-manager" }
mill-lang-common = { path = "../../crates/mill-lang-common" }
walkdir = "2.5"
include_dir = "0.7"
termimad = "0.31"

[build-dependencies]
walkdir = "2.5"

[dev-dependencies]
mill-server = { path = "../../crates/mill-server", default-features = false, features = ["test-helpers"] }
mill-lsp = { path = "../../crates/mill-lsp" }
mill-plugin-api = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.28"
url = "2.5"
jsonwebtoken = { workspace = true }
uuid = "1.0"
futures-util = "0.3"
futures = "0.3"
criterion = "0.8"
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.0"
serial_test = "3.0"
shellexpand = "3.1"
tracing-subscriber = { workspace = true }
once_cell = "1.19"
e2e = { path = "../../tests/e2e" }
mill-test-support = { path = "../../crates/mill-test-support" }
mill-handlers = { path = "../../crates/mill-handlers", default-features = false, features = ["refactor-all", "lang-rust", "lang-svelte"] }

[features]
default = ["lang-gitignore", "lang-markdown", "lang-python", "lang-rust", "lang-svelte", "lang-toml", "lang-typescript", "lang-yaml"]
lang-rust = ["mill-server/lang-rust", "mill-plugin-bundle/lang-rust", "mill-ast/lang-rust", "mill-plugin-system/lang-rust", "mill-transport/lang-rust"]
lang-typescript = ["mill-server/lang-typescript", "mill-plugin-bundle/lang-typescript", "mill-ast/lang-typescript", "mill-plugin-system/lang-typescript", "mill-transport/lang-typescript"]
lang-markdown = ["mill-server/lang-markdown", "mill-plugin-bundle/lang-markdown", "mill-ast/lang-markdown", "mill-plugin-system/lang-markdown", "mill-transport/lang-markdown"]
lang-toml = ["mill-server/lang-toml", "mill-plugin-bundle/lang-toml"]
lang-yaml = ["mill-server/lang-yaml", "mill-plugin-bundle/lang-yaml"]
mcp-proxy = ["mill-server/mcp-proxy", "mill-client/mcp-proxy", "mill-foundation/mcp-proxy", "mill-config/mcp-proxy"]

# Test features
heavy-tests = ["mill-handlers/heavy-tests"]
lsp-tests = []  # Enable LSP smoke tests (requires LSP servers installed)
lang-python = ["mill-server/lang-python", "mill-plugin-bundle/lang-python", "mill-ast/lang-python", "mill-plugin-system/lang-python", "mill-transport/lang-python"]
lang-gitignore = ["mill-server/lang-gitignore", "mill-plugin-bundle/lang-gitignore"]
lang-svelte = ["mill-server/lang-svelte", "mill-plugin-bundle/lang-svelte", "mill-ast/lang-svelte", "mill-plugin-system/lang-svelte", "mill-transport/lang-svelte", "mill-handlers/lang-svelte"]

# Platform-specific dependencies for process management
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }
