[package]
name = "cb-ast"
version = "1.0.1-beta"
edition = "2021"
description = "AST parsing and transformation for Codeflow Buddy"
license = "MIT"

[dependencies]
cb-core = { path = "../cb-core" }
cb-protocol = { path = "../cb-protocol" }
cb-plugin-api = { path = "../cb-plugin-api" }
cb-lang-python = { workspace = true }
cb-lang-typescript = { path = "../cb-lang-typescript" }
cb-lang-rust = { path = "../cb-lang-rust" }
cb-lang-go = { path = "../cb-lang-go" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-trait = { workspace = true }
# LSP types for refactoring integration
lsp-types = "0.97"
# SWC dependencies for true AST parsing (latest compatible versions)
swc_common = "14"
swc_ecma_parser = "24"
swc_ecma_ast = "15"
swc_ecma_visit = "15"
swc_ecma_codegen = "17"
# Enhanced parsing with regex (kept for fallback)
regex = "1.10"
# Rust AST parsing
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
# Additional utilities
petgraph = "0.6" # For dependency graph analysis
pathdiff = "0.2" # For calculating relative paths
tokio = { workspace = true } # For async file operations in import_updater
tracing = { workspace = true } # For logging in import_updater
dashmap = { workspace = true } # For thread-safe concurrent caching
toml_edit = "0.23" # For parsing and modifying Cargo.toml files

[dev-dependencies]
tempfile = "3.0"
