[package]
name = "cb-ast"
edition = "2021"
description = "AST parsing and transformation for Codeflow Buddy"
license = "MIT"

[dependencies]
codebuddy-foundation = { path = "../codebuddy-foundation" }
cb-plugin-api = { path = "../cb-plugin-api" }
cb-lang-typescript = { workspace = true }
cb-lang-rust = { workspace = true }
cb-lang-markdown = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
async-trait = { workspace = true }
# LSP types for refactoring integration
lsp-types = "0.97"
# Enhanced parsing with regex (kept for fallback)
regex = "1.10"
# Rust AST parsing
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
# Additional utilities
petgraph = "0.6" # For dependency graph analysis
pathdiff = "0.2" # For calculating relative paths
tokio = { workspace = true } # For async file operations in import_updater
tracing = { workspace = true } # For logging in import_updater
dashmap = { workspace = true } # For thread-safe concurrent caching
toml_edit = "0.23" # For parsing and modifying Cargo.toml files
codebuddy-core = { path = "../codebuddy-core" }
codebuddy-config = { path = "../codebuddy-config" }

[dev-dependencies]
tempfile = "3.0"
