[package]
name = "cb-client"
version = "1.0.0-rc4"
edition = "2021"
description = "Codeflow Buddy client implementation"
license = "MIT"

[dependencies]
cb-protocol = { path = "../cb-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI and command parsing
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"

# WebSocket client
tokio-tungstenite = "0.28"
futures-util = "0.3"
url = "2.4"

# Interactive CLI
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"

# Utilities
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = { workspace = true }
codebuddy-plugin-system = { path = "../codebuddy-plugin-system", optional = true }
codebuddy-core = { path = "../codebuddy-core" }
codebuddy-config = { path = "../codebuddy-config" }

[features]
default = []
mcp-proxy = ["codebuddy-plugin-system", "codebuddy-core/mcp-proxy", "codebuddy-config/mcp-proxy"]

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
lsp-types = "0.97"
