[package]
name = "cb-core"
version = "1.0.1-beta"
edition = "2021"
description = "Core types, configuration, and error handling for Codeflow Buddy"
license = "MIT"

[dependencies]
cb-types = { path = "../cb-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
figment = { version = "0.10", features = ["toml", "env"] }
jsonwebtoken = { workspace = true }
dashmap = { workspace = true }

[build-dependencies]
serde = { workspace = true }
toml = "0.9"

[features]
default = []
mcp-proxy = []

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.2"
tokio = { workspace = true }