[package]
name = "cb-core"
edition = "2021"
description = "Core types, configuration, and error handling for Codeflow Buddy"
license = "MIT"

[dependencies]
cb-types = { path = "../cb-types" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.9"
figment = { version = "0.10", features = ["toml", "env"] }
jsonwebtoken = { workspace = true }
dashmap = { workspace = true }
anyhow = "1.0"
sha2 = "0.10"

cb-plugin-registry = { path = "../cb-plugin-registry" }
glob = "0.3"

[features]
default = []
mcp-proxy = []

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.2"
tokio = { workspace = true }