[package]
name = "cb-handlers"
edition = "2021"

[features]
default = ["lang-rust", "lang-typescript"]
lang-rust = ["cb-lang-rust"]
lang-typescript = ["cb-lang-typescript"]
analysis-dead-code = ["dep:cb-analysis-dead-code", "dep:cb-analysis-common"]
analysis-circular-deps = ["dep:cb-analysis-circular-deps", "dep:cb-analysis-graph"]

[dependencies]
cb-protocol = { path = "../cb-protocol" }
cb-core = { path = "../cb-core" }
cb-types = { path = "../cb-types" }
cb-services = { path = "../cb-services" }
cb-plugin-api = { path = "../cb-plugin-api" }
cb-lsp = { path = "../cb-lsp" }
cb-ast = { path = "../cb-ast" }
cb-plugins = { path = "../cb-plugins" }

# Language plugins (feature-gated, temporarily reduced to TS + Rust)
cb-lang-rust = { workspace = true, optional = true }
cb-lang-typescript = { workspace = true, optional = true }

# Analysis crates (optional)
cb-analysis-common = { path = "../../analysis/cb-analysis-common", optional = true }
cb-analysis-dead-code = { path = "../../analysis/cb-analysis-dead-code", optional = true }
cb-analysis-circular-deps = { path = "../../analysis/cb-analysis-circular-deps", optional = true }
cb-analysis-graph = { path = "../../analysis/cb-analysis-graph", optional = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
lsp-types = "0.97"
clap = { version = "4.0", features = ["derive"] }
toml = "0.9"
toml_edit = "0.23"
tempfile = "3.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
cb-transport = { path = "../cb-transport" }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
futures = { workspace = true }
regex = "1.10"
sha2 = "0.10"
ignore = "0.4"
url = "2.5"
